--- a/scss/block/_slider.scss
+++ b/scss/block/_slider.scss
@@ -1,4 +1,9 @@
 .slider__matches{
     margin-top: .8rem;
+    margin-left: 5rem;
     
+    h1{
+        position: relative;
+        z-index: 100;
+    }
 }
