--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@
   flex-wrap: wrap;
   margin-top: 9em;
   gap: 2rem;
+  margin-left: 5rem;
 }
 .block-artur__info .block-artur__messangers {
   display: flex;
@@ -62,13 +63,26 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  filter: drop-shadow(0px 4px 8px rgb(0, 0, 0));
+  margin-right: 5em;
+}
+@keyframes animka {
+  0% {
+    opacity: 2;
+  }
 }
 
+.ssk7-about {
+  position: relative;
+  z-index: 7;
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+}
 .ssk7-about .ssk7-about__content {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   max-width: 1200px;
   margin-top: 5rem;
+  margin-left: 5rem;
 }
 .ssk7-about h1 {
   font-family: "Audiowide";
@@ -78,10 +92,16 @@
   line-height: 61px;
   max-width: 167px;
   margin-bottom: 1rem;
+  margin-right: 5rem;
 }
 
 .slider__matches {
   margin-top: 0.8rem;
+  margin-left: 5rem;
+}
+.slider__matches h1 {
+  position: relative;
+  z-index: 100;
 }
 
 .content {
@@ -98,8 +118,8 @@
   filter: blur(20px);
   width: 380px;
   height: 380px;
-  left: 8em;
-  top: 2rem;
+  left: 56px;
+  top: 25px;
 }
 .content .elipse-2 {
   background: linear-gradient(137.45deg, rgba(255, 230, 0, 0.8) -4.58%, rgba(255, 92, 0, 0.8) 110.09%);
@@ -109,14 +129,6 @@
   left: 25em;
   top: -2rem;
 }
-.content .elipse-3 {
-  background: linear-gradient(182.92deg, rgba(255, 230, 0, 0.8) 2.3%, rgba(255, 92, 0, 0.8) 127.69%);
-  filter: blur(20px);
-  width: 400px;
-  height: 403.29px;
-  right: 21em;
-  top: 3em;
-}
 .content .elipse-4 {
   background: linear-gradient(217.66deg, rgba(255, 230, 0, 0.8) -22.53%, rgba(255, 92, 0, 0.8) 130.18%);
   filter: blur(20px);
@@ -125,4 +137,57 @@
   right: 20em;
   top: -2rem;
   z-index: 1;
+}
+.content .elipse-5 {
+  background: linear-gradient(210.8deg, rgba(255, 230, 0, 0.8) 41.51%, rgba(255, 92, 0, 0.8) 96.98%);
+  filter: blur(20px);
+  width: 235px;
+  height: 235px;
+  right: 50em;
+}
+.content .elipse-6 {
+  background: linear-gradient(146.58deg, rgba(255, 230, 0, 0.8) 3.99%, rgba(255, 92, 0, 0.8) 139.51%);
+  filter: blur(20px);
+  width: 380px;
+  height: 380px;
+  right: 30em;
+}
+.content .elipse-7 {
+  background: linear-gradient(106.5deg, rgba(255, 230, 0, 0.8) 7.41%, rgba(255, 92, 0, 0.8) 129.56%);
+  filter: blur(20px);
+  width: 225px;
+  height: 225px;
+  left: 15rem;
+  bottom: -1rem;
+}
+.content .elipse-8 {
+  background: linear-gradient(146.58deg, rgba(255, 230, 0, 0.8) 3.99%, rgba(255, 92, 0, 0.8) 139.51%);
+  filter: blur(20px);
+  width: 380px;
+  height: 380px;
+  left: 19rem;
+}
+.content .elipse-9 {
+  background: linear-gradient(295.48deg, rgba(255, 230, 0, 0.8) -25.64%, rgba(255, 92, 0, 0.8) 208.12%);
+  filter: blur(20px);
+  width: 235px;
+  height: 235px;
+  left: 15em;
+  top: 83em;
+}
+.content .elipse-10 {
+  background: linear-gradient(305.91deg, rgba(255, 230, 0, 0.8) -1.19%, rgba(255, 92, 0, 0.8) 114.69%);
+  filter: blur(20px);
+  width: 235px;
+  height: 235px;
+  right: 30em;
+  top: 70em;
+}
+.content .elipse-11 {
+  background: linear-gradient(210.8deg, rgba(255, 230, 0, 0.8) 41.51%, rgba(255, 92, 0, 0.8) 96.98%);
+  filter: blur(20px);
+  width: 235px;
+  height: 235px;
+  right: 36em;
+  top: 79em;
 }/*# sourceMappingURL=main.css.map */
