--- a/scss/block/_about.scss
+++ b/scss/block/_about.scss
@@ -2,13 +2,18 @@
     // display: flex;
     // justify-content: center;
     // align-items: center;
+    position: relative;
+    z-index: 7;
+    max-width: 1200px;
+    display: flex;
+    justify-content: center;
 
     .ssk7-about__content{
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         max-width: 1200px;
         margin-top: 5rem ;
+        margin-left: 5rem;
     }
-
 
     h1{
         font-family: 'Audiowide';
@@ -18,6 +23,7 @@
         line-height: 61px;
         max-width: 167px;
         margin-bottom: 1rem;
+        margin-right: 5rem;
     }
 }
 
