--- a/scss/block/_about.scss
+++ b/scss/block/_about.scss
@@ -8,6 +8,8 @@
     display: flex;
     justify-content: center;
 
+
+
     .ssk7-about__content{
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         max-width: 1200px;
@@ -24,6 +26,7 @@
         max-width: 167px;
         margin-bottom: 1rem;
         margin-right: 5rem;
+        margin-left: -5rem;
     }
 }
 
