--- a/scss/block/_slider.scss
+++ b/scss/block/_slider.scss
@@ -1,9 +1,12 @@
 .slider__matches{
     margin-top: .8rem;
-    margin-left: 5rem;
-    
-    h1{
-        position: relative;
-        z-index: 100;
+    position: relative;
+    z-index: 100;
+
+
+    .stock_order{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
