--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,4 +3,5 @@
 @import "./block/about";
 @import "./block/slider";
 @import "./elements_backgound/elipse";
-@import "./block/global.scss"
+@import "./block/global.scss";
+@import "./block/GAS"
