--- a/scss/elements_backgound/_elipse.scss
+++ b/scss/elements_backgound/_elipse.scss
@@ -64,10 +64,10 @@
      .elipse-7{
         background: linear-gradient(106.5deg, rgba(255, 230, 0, 0.8) 7.41%, rgba(255, 92, 0, 0.8) 129.56%);
         filter: blur(20px);
-        width: 225px;
-        height: 225px;
+        width: 340px;
+        height: 340px;
         left: 15rem;
-        bottom: -1rem;
+        bottom: 11rem;
      }
 
      .elipse-8{
@@ -112,5 +112,50 @@
         height: 225px;
         left: 20em;
         top: 59em;
+     }
+
+     .elipse-13{
+      background: linear-gradient(295.56deg, rgba(255, 230, 0, 0.8) -28.58%, rgba(255, 92, 0, 0.8) 148.79%);
+      filter: blur(20px);
+      width: 340px;
+      height: 340px;
+      left: 76em;
+      top: 113em;  
+     }
+     
+     .elipse-14{
+      background: linear-gradient(112.76deg, rgba(255, 230, 0, 0.8) 25.12%, rgba(255, 92, 0, 0.8) 89.81%);
+      filter: blur(20px);
+      width: 235px;
+      height: 235px;
+      left: 22em;
+      top: 98em;  
+     }
+
+     .elipse-15{
+      background: linear-gradient(295.48deg, rgba(255, 230, 0, 0.8) -25.64%, rgba(255, 92, 0, 0.8) 208.12%);
+      filter: blur(20px);
+      width: 235px;
+      height: 235px;
+      left: 20em;
+      top: 117em; 
+     }
+
+     .elipse-16{
+      background: linear-gradient(295.56deg, rgba(255, 230, 0, 0.8) -28.58%, rgba(255, 92, 0, 0.8) 148.79%);
+      filter: blur(20px);
+      width: 340px;
+      height: 340px;
+      left: 78em;
+      top: 145em;
+     }
+
+     .elipse-17{
+      background: linear-gradient(261.9deg, rgba(255, 230, 0, 0.8) -32.39%, rgba(255, 92, 0, 0.8) 133.48%);
+      filter: blur(20px);
+      width: 140px;
+      height: 140px;
+      left: 85em;
+      top: 132em;
      }
 }
